cmake_minimum_required(VERSION 3.27)
project(VDOOM)

set(CMAKE_CXX_STANDARD 17)

add_executable(VDOOM
        am_map.cpp
        am_map.h
        d_englsh.h
        d_event.h
        d_french.h
        d_items.c
        d_items.h
        d_main.cpp
        d_main.h
        d_net.cpp
        d_net.h
        d_player.h
        d_textur.h
        d_think.h
        d_ticcmd.h
        doomdata.h
        doomdef.c
        doomdef.h
        doomstat.c
        doomstat.h
        doomtype.h
        dstrings.c
        dstrings.h
        f_finale.cpp
        f_finale.h
        f_wipe.c
        f_wipe.h
        g_game.cpp
        g_game.h
        hu_lib.c
        hu_lib.h
        hu_stuff.cpp
        hu_stuff.h
        i_main.c
        i_net.cpp
        i_net.h
        i_sound.c
        i_sound.h
        i_system.c
        i_system.h
        i_video.cpp
        i_video.h
        info.cpp
        info.h
        m_argv.c
        m_argv.h
        m_bbox.c
        m_bbox.h
        m_cheat.c
        m_cheat.h
        m_fixed.c
        m_fixed.h
        m_menu.cpp
        m_menu.h
        m_misc.cpp
        m_misc.h
        m_random.c
        m_random.h
        m_swap.c
        m_swap.h
        p_ceilng.cpp
        p_doors.cpp
        p_enemy.cpp
        p_floor.cpp
        p_inter.cpp
        p_inter.h
        p_lights.cpp
        p_local.h
        p_map.cpp
        p_maputl.cpp
        p_mobj.cpp
        p_mobj.h
        p_plats.cpp
        p_pspr.cpp
        p_pspr.h
        p_saveg.cpp
        p_saveg.h
        p_setup.cpp
        p_setup.h
        p_sight.cpp
        p_spec.cpp
        p_spec.h
        p_switch.cpp
        p_telept.cpp
        p_tick.cpp
        p_tick.h
        p_user.cpp
        r_bsp.cpp
        r_bsp.h
        r_data.cpp
        r_data.h
        r_defs.h
        r_draw.cpp
        r_draw.h
        r_local.h
        r_main.cpp
        r_main.h
        r_plane.cpp
        r_plane.h
        r_segs.cpp
        r_segs.h
        r_sky.cpp
        r_sky.h
        r_state.h
        r_things.cpp
        r_things.h
        s_sound.cpp
        s_sound.h
        sounds.cpp
        sounds.h
        st_lib.cpp
        st_lib.h
        st_stuff.cpp
        st_stuff.h
        tables.cpp
        tables.h
        v_video.cpp
        v_video.h
        w_wad.cpp
        w_wad.h
        wi_stuff.cpp
        wi_stuff.h
        z_zone.cpp
        z_zone.h
)

